Atualiza salas de tutorial

--- a/speakers.html
+++ b/speakers.html
@@ -103,7 +103,7 @@
             <div class="uk-width-1-1@m uk-margin-bottom">
                 <div class="uk-card-green">
                     <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
-                        Universidade Federal do Rio Grande do Norte (UFRN)
+                        Universidade Federal do Rio Grande do Norte (UFRN) - Prédio do Instituto Metrópole Digital (IMD)
                     </span>
                 </div>
                 <div class="uk-card uk-card-default uk-text-center">
@@ -117,7 +117,7 @@
                     <div class="uk-card-default uk-card">
                         <div class="uk-card-brown">
                             <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
-                                Sala 1
+                                Sala A307
                             </span>
                         </div>
                         <div class="uk-grid-small uk-child-width-expand@m agenda-card-body">
@@ -139,7 +139,7 @@
                     <div class="uk-card-default uk-card">
                         <div class="uk-card-brown">
                             <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
-                                Sala 2
+                                Sala A309
                             </span>
                         </div>
                         <div class="uk-grid-small uk-child-width-expand@m agenda-card-body">
@@ -161,7 +161,7 @@
                     <div class="uk-card-default uk-card">
                         <div class="uk-card-brown">
                             <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
-                                Sala 2
+                                Sala A307
                             </span>
                         </div>
                         <div class="uk-grid-small uk-child-width-expand@m agenda-card-body">
@@ -184,7 +184,7 @@
                     <div class="uk-card-default uk-card">
                         <div class="uk-card-brown">
                             <span class="uk-margin-small-left"><img height="20px" width="25px" src="/assets/images/location-icon.png" alt="Location Icon">
-                                Sala 2
+                                Sala A309
                             </span>
                         </div>
                         <div class="uk-grid-small uk-child-width-expand@m agenda-card-body">
