feat - página do código de confuta (#36)

--- a/speakers.html
+++ b/speakers.html
@@ -50,6 +50,7 @@
                 <!-- <li><a class="uk-navbar-item" href="/index.html#patrocinio">Patrocínio</a></li> -->
                 <li><a class="uk-navbar-item" href="/index.html#patrocinadoras">Patrocinadoras</a></li>
                 <li><a class="uk-navbar-item" href="/speakers.html">Agenda</a></li>
+                <li><a class="uk-navbar-item" href="/cdc.html">Código de Conduta</a></li>
             </ul>
             <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon uk-toggle="target: #sidenav"></a>
         </div>
@@ -70,6 +71,7 @@
                 <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li>
                 <li><a class="uk-navbar-item" href="#patrocinadoras">Patrocinadoras</a></li>
                 <li><a class="uk-navbar-item" href="/speakers.html">Palestras</a></li>
+                <li><a class="uk-navbar-item" href="/cdc.html">Código de Conduta</a></li>
             </ul>
         </div>
     </div>
