--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <!-- <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li> -->
                 <li><a class="uk-navbar-item" href="#patrocinadoras">Patrocinadoras</a></li>
                 <li><a class="uk-navbar-item" href="/speakers.html">Agenda</a></li>
+                <li><a class="uk-navbar-item" href="/cdc.html">Código de Conduta</a></li>
 
             </ul>
             <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon uk-toggle="target: #sidenav"></a>
@@ -70,6 +71,7 @@
                 <!-- <li><a class="uk-navbar-item" href="#patrocinio">Patrocínio</a></li> -->
                 <li><a class="uk-navbar-item" href="#patrocinadoras">Patrocinadoras</a></li>
                 <li><a class="uk-navbar-item" href="/speakers.html">Agenda</a></li>
+                <li><a class="uk-navbar-item" href="/cdc.html">Código de Conduta</a></li>
 
             </ul>
         </div>
