Add Ana Dulce photo to the speakers page

--- a/speakers.html
+++ b/speakers.html
@@ -266,7 +266,7 @@
                         <div class="uk-grid-small uk-child-width-expand@m agenda-card-body">
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle avatar-medium" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/ana-dulce-padovan.jpg" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small uk-grid-margin">
