--- a/speakers.html
+++ b/speakers.html
@@ -131,7 +131,7 @@
                             <div class="uk-text-center uk-text-small uk-grid-margin">
                                 <span class="uk-badge uk-badge-large uk-badge-beige">09:30 - 11:30</span>
                                 <p class="uk-text-bold">Visualização e Processamento de Dados Geoespaciais: Uma Introdução Prática.</p>
-                                <p><strong>Palestrante(s) </strong>Pedro Florencio de Almeida Neto</p>
+                                <p><strong>Instrutor(a) </strong>Pedro Florencio de Almeida Neto</p>
                             </div>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                             <div class="uk-text-center uk-text-small uk-grid-margin">
                                 <span class="uk-badge uk-badge-large uk-badge-beige">09:30 - 11:30</span>
                                 <p class="uk-text-bold">Treinar um Modelo não é Tudo: O Ciclo de Vida de Modelos de Machine Learning.</p>
-                                <p><strong>Palestrante(s) </strong> Marcos Vinícius Gomes Jacinto</p>
+                                <p><strong>Instrutor(a) </strong> Marcos Vinícius Gomes Jacinto</p>
                             </div>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
                             <div class="uk-text-center uk-text-small uk-grid-margin">
                                 <span class="uk-badge uk-badge-large uk-badge-beige">14:30 - 16:30</span>
                                 <p class="uk-text-bold">Introdução a Programação Competitiva com Python</p>
-                                <p><strong>Palestrante(s) </strong> Pablo Gustavo, Ian Gabriel</p>
+                                <p><strong>Instrutor(a) </strong> Pablo Gustavo, Ian Gabriel</p>
                             </div>
                         </div>
                     </div>
@@ -199,7 +199,7 @@
                             <div class="uk-text-center uk-text-small uk-grid-margin">
                                 <span class="uk-badge uk-badge-large uk-badge-beige">14:30 - 16:30</span>
                                 <p class="uk-text-bold">Introdução prática ao Machine Learning com o TensorFlow e Keras.</p>
-                                <p><strong>Palestrante(s) </strong> Ana Carolina Sousa Dias, Ellem Almeida Amorim</p>
+                                <p><strong>Instrutor(a) </strong> Ana Carolina Sousa Dias, Ellem Almeida Amorim</p>
                             </div>
                         </div>
                     </div>
