--- a/cdc.html
+++ b/cdc.html
@@ -107,7 +107,7 @@
                 <li>O público-alvo do evento também inclui crianças e adolescentes, por isso buscamos manter um ambiente apropriado para todas as faixas etárias. Sendo assim, linguagem e imagens sexualizadas não são adequados para palestras e ações promocionais de patrocinadores.</li>
             </ol>
             
-            <p>Se você se sentiu assediada(o), perseguida(o) ou humilhado(o), ou presenciou alguma destas atitudes, por favor entre em contato com através do Google Forms Equipe de Resposta do Código de Conduta acessível <a href="#" onclick="alert('O formulário será disponibilizado em breve!')">neste link</a>.</p>
+            <p>Se você se sentiu assediada(o), perseguida(o) ou humilhado(o), ou presenciou alguma destas atitudes, por favor entre em contato com através do Google Forms Equipe de Resposta do Código de Conduta acessível <a href="https://forms.gle/5i9mG4AFKH2QMNNc9" target="_blank">neste link</a>.</p>
 
             <p>Havendo um relato de violação destes princípios, a Equipe de Resposta realizará a devida análise e, quando necessário, tomará as ações para impedir a reincidência. Estas ações podem, mas não se restringem nem implicam em ir desde uma conversa em busca da retratação até um convite a se retirar do evento por tempo indeterminado.</p>
 
