--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
                             </a>
                             <span class="uk-margin-small-right" 
                                   uk-icon="question"
+                                  style="color: black !important"
                                   uk-tooltip="Apenas participantes inscritos via Even3 podem participar dos tutoriais">
                             </span>
                         </div>
