Add Eric Vinicius talk

--- a/speakers.html
+++ b/speakers.html
@@ -244,13 +244,13 @@
                         <div class="uk-grid-small uk-child-width-expand@m agenda-card-body">
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/juliana-barros-lima.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/eric-vinicius-de-lima.jpeg" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small uk-grid-margin">
                                 <span class="uk-badge uk-badge-large uk-badge-beige">10:20 - 11:10</span>
-                                <p class="uk-text-bold">Bor(dados) com Python e Data Art.</p>
-                                <p><strong>Palestrante(s) </strong> Juliana Maria de Barros Lima</p>
+                                <p class="uk-text-bold">Queimada Grande: Django, Flask e FastAPI pegando fogo na ilha</p>
+                                <p><strong>Palestrante(s) </strong> Eric Vinícius de Lima</p>
                             </div>
                         </div>
                     </div>
