--- a/speakers.html
+++ b/speakers.html
@@ -506,13 +506,13 @@
                         <div class="uk-grid-small uk-child-width-expand@m agenda-card-body">
                             <div class="uk-text-center uk-text-small">
                                 <div class="uk-width-auto">
-                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/rafaela-torres.png" alt="Avatar">
+                                    <img class="uk-border-circle avatar-medium"  src="/assets/images/avatar/vitorbuxbaum.jpg" alt="Avatar">
                                 </div>
                             </div>
                             <div class="uk-text-center uk-text-small uk-grid-margin">
                                 <span class="uk-badge uk-badge-large uk-badge-beige">10:20 - 11:10</span>
-                                <p class="uk-text-bold">"Dados, Python e Diversidade no Recrutamento: A Saga na Busca por Unicórnios Coloridos no Mundo Tech"</p>
-                                <p><strong>Palestrante(s) </strong> Rafaela lima torres maciel</p>
+                                <p class="uk-text-bold">Decorators: o que realmente são, e como fazer o seu</p>
+                                <p><strong>Palestrante(s) </strong> Vitor Buxbaum</p>
                             </div>
                         </div>
                     </div>
