Update save in cloud link

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
             <h4 class="uk-text-center">OURO</h3>
 
             <div class="uk-flex uk-flex-center">
-                <a href="https://saveincloud.com/" target="_blank">
-                    <img class="patrocinador-ouro" src="assets/images/patrocinio/save-in-cloud-logo.svg"/>
+                <a href="https://saveincloud.com/pt/solucoes-cloud/cloud-servidor-web/cloud-python/" title="hospedagem Python">
+                    <img class="patrocinador-ouro" src="assets/images/patrocinio/save-in-cloud-logo.svg" alt="hospedagem Python">
                 </a>
             </div>
         </div>
